[tiptap-editor] fix: editor missing padding in mobile (#4522)
+ remove resize from mobile image

--- a/packages/tiptap-editor/web/src/statics/styles/tiptap-editor-styles.scss
+++ b/packages/tiptap-editor/web/src/statics/styles/tiptap-editor-styles.scss
@@ -32,4 +32,8 @@
   .ProseMirror {
     height: 100%;
   }
+
+  @include phone {
+    padding: 18px;
+  }
 }
